# c-hangman

./: CMakeLists.txt  README.md  vcpkg.json
src/: game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  word_list.cpp  word_list.h
tests/: CMakeLists.txt  test_game.cpp
